<resources>
    <string name="app_name">SMD_Assignment_2</string>
    <string name="restraunt_app">Restraunt App</string>
    <string name="add_restraunt">Add Restraunt</string>
    <string name="ratings">Ratings</string>
    <string name="restraunt_name">Restraunt Name</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
    <string name="add_restraunt_heading">Add Restraunt</string>
    <string name="add">Add</string>
</resources>