<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvRatings"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/ratings"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="5dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:src="@drawable/profile"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location"

                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/description"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tvRestrauntName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restraunt_name"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="79dp"
                    android:layout_height="48dp"
                    android:src="@drawable/calling"
                    android:layout_gravity="end"
                    android:layout_marginBottom="5dp"
                    />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:src="@drawable/chat"
                    android:layout_gravity="end"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>